@@ -32,16 +32,54 @@ body { margin-top: 20px !important; }
 /* third-and-above-level lists */
 #admin_menu li li.expandable ul { margin: -20px 0 0 160px; }
 
-#admin_menu li:hover ul ul, #admin_menu li:hover ul ul ul, #admin_menu li.sfhover ul ul, #admin_menu li.sfhover ul ul ul { left: -999em; }
+#admin_menu li:hover ul ul,
+#admin_menu li:hover ul ul ul,
+#admin_menu li:hover ul ul ul ul,
+#admin_menu li:hover ul ul ul ul ul,
+#admin_menu li.sfhover ul ul,
+#admin_menu li.sfhover ul ul ul,
+#admin_menu li.sfhover ul ul ul ul,
+#admin_menu li.sfhover ul ul ul ul ul {
+  left: -999em;
+}
 
 /* lists nested under hovered list items */
-#admin_menu li:hover ul, #admin_menu li li:hover ul, #admin_menu li li li:hover ul, #admin_menu li.sfhover ul, #admin_menu li li.sfhover ul, #admin_menu li li li.sfhover ul { left: auto; }
+#admin_menu li:hover ul,
+#admin_menu li li:hover ul,
+#admin_menu li li li:hover ul,
+#admin_menu li li li li:hover ul,
+#admin_menu li li li li li:hover ul,
+#admin_menu li.sfhover ul,
+#admin_menu li li.sfhover ul,
+#admin_menu li li li.sfhover ul,
+#admin_menu li li li li.sfhover ul,
+#admin_menu li li li li li.sfhover ul {
+  left: auto;
+}
 
 /* second-and-more-level hovering */
 #admin_menu li li.expandable { background: #606066 url(arrow.png) no-repeat 145px 7px; }
-#admin_menu li li:hover, #admin_menu li li.sfhover { background-color: #333333; }
-#admin_menu li li:hover a, #admin_menu li li:hover li:hover a, #admin_menu li li:hover li:hover li:hover a { font-weight: bold; }
-#admin_menu li li.expandable:hover a, #admin_menu li li.expandable:hover li.expandable:hover a { border-color: #666666; font-weight: normal; }
-#admin_menu li li:hover li a, #admin_menu li li.sfhover li a, #admin_menu li li.sfhover li.sfhover li a { font-weight: normal; }
-#admin_menu li li.sfhover a, #admin_menu li li.sfhover li.sfhover a, #admin_menu li li.sfhover li.sfhover li.sfhover a { font-weight: bold; width: 90%; } /* IE */
+#admin_menu li li:hover,
+#admin_menu li li.sfhover {
+  background-color: #333333;
+}
+#admin_menu li li:hover a,
+#admin_menu li li:hover li:hover a,
+#admin_menu li li:hover li:hover li:hover a {
+  font-weight: bold;
+}
+#admin_menu li li.expandable:hover a,
+#admin_menu li li.expandable:hover li.expandable:hover a {
+  border-color: #666666; font-weight: normal;
+}
+#admin_menu li li:hover li a,
+#admin_menu li li.sfhover li a,
+#admin_menu li li.sfhover li.sfhover li a {
+  font-weight: normal;
+}
+#admin_menu li li.sfhover a,
+#admin_menu li li.sfhover li.sfhover a,
+#admin_menu li li.sfhover li.sfhover li.sfhover a {
+  font-weight: bold; width: 90%; /* IE */
+}
 
