@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 5.x-1.x, xxxx-xx-xx
 ------------------------------
+#178876 by sun: Fixed 3rd-level submenus expand without hover over.
 #153455 by sun: Fixed add product node sub-elements are empty.
 Fixed path_to_theme() call breaking blocks page.
 #177582 by sun: Fixed bluebreeze theme compatibility.
